--- a/src/Viettut/Bundles/ApiBundle/Resources/config/routing.yml
+++ b/src/Viettut/Bundles/ApiBundle/Resources/config/routing.yml
@@ -17,3 +17,18 @@ api_reset_password_reset:
     path: /resetting/reset/{token}
     defaults: { _controller: ViettutApiBundle:ResetPassword:reset }
     methods: [POST]
+
+api_course:
+    type: rest
+    resource: Viettut\Bundles\ApiBundle\Controller\CourseController
+    name_prefix:  api_1_
+
+api_chapter:
+    type: rest
+    resource: Viettut\Bundles\ApiBundle\Controller\ChapterController
+    name_prefix:  api_1_
+
+api_tutorial:
+    type: rest
+    resource: Viettut\Bundles\ApiBundle\Controller\TutorialController
+    name_prefix:  api_1_
