--- a/src/Viettut/Bundles/UserBundle/Resources/config/routing.yml
+++ b/src/Viettut/Bundles/UserBundle/Resources/config/routing.yml
@@ -1,3 +1,4 @@
-viettut_bundles_user_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: ViettutBundlesUserBundle:Default:index }
+api_user:
+    type: rest
+    resource: Viettut\Bundles\UserBundle\Controller\UserController
+    name_prefix:  api_1_
