--- a/src/Viettut/Bundles/ApiBundle/Resources/config/routing.yml
+++ b/src/Viettut/Bundles/ApiBundle/Resources/config/routing.yml
@@ -32,3 +32,8 @@ api_tutorial:
     type: rest
     resource: Viettut\Bundles\ApiBundle\Controller\TutorialController
     name_prefix:  api_1_
+
+api_tag:
+    type: rest
+    resource: Viettut\Bundles\ApiBundle\Controller\TagController
+    name_prefix:  api_1_
