--- a/src/Viettut/Bundles/WebBundle/Resources/public/bower.json
+++ b/src/Viettut/Bundles/WebBundle/Resources/public/bower.json
@@ -40,6 +40,7 @@
     "marked": "~0.3.5",
     "ng-file-upload": "~7.3.9",
     "ng-file-upload-shim": "~7.3.9",
+    "ng-tags-input": "~3.0.0",
     "ngUpload": "~0.5.17",
     "ngprogress": "~1.1.2",
     "ngstorage": "~0.3.9",
