--- a/src/Viettut/Resources/config/doctrine/Core/Course.orm.yml
+++ b/src/Viettut/Resources/config/doctrine/Core/Course.orm.yml
@@ -63,4 +63,10 @@ Viettut\Entity\Core\Course:
             targetEntity: Viettut\Entity\Core\CourseTag
             mappedBy: course
             cascade: ['remove', 'persist']
+        comments:
+            targetEntity: Viettut\Entity\Core\Comment
+            mappedBy: course
+            cascade: ['remove']
+            orphanRemoval: true
+
     lifecycleCallbacks: {  }
