--- a/src/Viettut/Bundles/WebBundle/Resources/public/bower.json
+++ b/src/Viettut/Bundles/WebBundle/Resources/public/bower.json
@@ -46,5 +46,9 @@
     "ngstorage": "~0.3.9",
     "satellizer": "~0.12.3",
     "wiz-markdown": "*"
+  },
+  "resolutions": {
+    "angular": "~1.4.5",
+    "font-awesome": "~4.4.0"
   }
 }
