--- a/src/Viettut/Bundles/WebBundle/Resources/public/bower.json
+++ b/src/Viettut/Bundles/WebBundle/Resources/public/bower.json
@@ -26,29 +26,23 @@
     "angular-animate": "~1.4.5",
     "angular-bootstrap": "~0.13.4",
     "angular-isotope": "~0.1.14",
-    "angular-marked": "~0.0.21",
     "angular-sanitize": "~1.4.6",
-    "angular-toastr": "~1.5.0",
     "angular-ui-router": "~0.2.15",
-    "angular-upload": "~1.0.12",
     "angularUtils-pagination": "angular-utils-pagination#~0.8.4",
     "bootstrap": "~3.3.5",
     "font-awesome": "fontawesome#~4.4.0",
     "highlightjs": "~8.7.0",
     "jquery": "~2.1.4",
     "ladda-angular": "~1.0.1",
-    "marked": "~0.3.5",
     "ng-file-upload": "~7.3.9",
     "ng-file-upload-shim": "~7.3.9",
     "ng-tags-input": "~3.0.0",
-    "ngUpload": "~0.5.17",
-    "ngprogress": "~1.1.2",
     "ngstorage": "~0.3.9",
     "satellizer": "~0.12.3",
     "wiz-markdown": "*"
   },
   "resolutions": {
-    "angular": "~1.4.5",
-    "font-awesome": "~4.4.0"
+    "font-awesome": "~4.4.0",
+    "angular": ">=1.3.0"
   }
 }
