--- a/src/Viettut/Resources/config/serializer/Entity.Core.Course.yml
+++ b/src/Viettut/Resources/config/serializer/Entity.Core.Course.yml
@@ -37,6 +37,6 @@ Viettut\Entity\Core\Course:
         enroll:
             expose: true
             groups: [course.detail]
-        deletedAt:
+        createdAt:
             expose: true
             groups: [course.detail, course.summary]
