--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -5,14 +5,15 @@ parameters:
     database_name: viettut
     database_user: viettut
     database_password: 12345678
-    mailer_transport: smtp
-    mailer_host: 127.0.0.1
-    mailer_user: null
-    mailer_password: null
-    mailer_port: 1025
-    mailer_sender: tagcade.dev@gmail.com
-    mailer_sender_name: Tagcade.dev
+    mailer_transport: gmail
+    mailer_host: ~
+    mailer_user: tut4vietcoder
+    mailer_password: Fuqcjd6j3U@@
+    mailer_port: ~
+    mailer_sender: tut4vietcoder@gmail.com
+    mailer_sender_name: VietTut
     secret: ThisTokenIsNotSoSecretChangeIt
     password_resetting_link: 'http://localhost:9010/#/reset/changePassword'
     uploadRootDirectory: /var/www/api.server.dev/web/uploads/images
     uploadDirectory: /uploads/images
+    popularSize: 3
