--- a/nginx.conf
+++ b/nginx.conf
@@ -1,30 +1,17 @@
 server {
-    server_name fierce-fjord-3208.herokuapp.com
-    root web;
+	location / {
+    		# try to serve file directly, fallback to rewrite
+    		try_files $uri @rewriteapp;
+	}
 
-    location / {
-        # try to serve file directly, fallback to app.php
-        try_files $uri /app.php$is_args$args;
-    }
-    # DEV
-    # This rule should only be placed on your development environment
-    # In production, don't include this and don't deploy app_dev.php or config.php
-    location ~ ^/(app_dev|config)\.php(/|$) {
-        fastcgi_pass unix:/var/run/php5-fpm.sock;
-        fastcgi_split_path_info ^(.+\.php)(/.*)$;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    }
-    # PROD
-    location ~ ^/app\.php(/|$) {
-        fastcgi_pass unix:/var/run/php5-fpm.sock;
-        fastcgi_split_path_info ^(.+\.php)(/.*)$;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        # Prevents URIs that include the front controller. This will 404:
-        # http://domain.tld/app.php/some-path
-        # Remove the internal directive to allow URIs like this
-        internal;
-    }
+	location @rewriteapp {
+    		# rewrite all to app.php
+    		rewrite ^(.*)$ /app.php/$1 last;
+	}
+
+	location ~ ^/(app|app_dev|config)\.php(/|$) {
+    		try_files @heroku-fcgi @heroku-fcgi;
+    		internal;
+	}
 }
 
