--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -1,18 +1,43 @@
 imports:
     - { resource: config.yml }
 
-#framework:
-#    validation:
-#        cache: validator.mapping.cache.apc
-#    serializer:
-#        cache: serializer.mapping.cache.apc
+framework:
+    validation:
+        cache: validator.mapping.cache.apc
+    serializer:
+        cache: serializer.mapping.cache.apc
 
-#doctrine:
-#    orm:
-#        metadata_cache_driver: apc
-#        result_cache_driver: apc
-#        query_cache_driver: apc
+doctrine:
+    orm:
+        auto_mapping: true
+        metadata_cache_driver: apc
+        result_cache_driver: apc
+        query_cache_driver: apc
 
+#monolog:
+#    handlers:
+#        main:
+#            type:               fingers_crossed
+#            action_level:       error
+#            handler:            grouped
+#        grouped:
+#            type:               group
+#            members:            [streamed, swift]
+#        streamed:
+#            type:               stream
+#            path:               "%kernel.logs_dir%/%kernel.environment%.log"
+#            level:              debug
+#        swift:
+#            type:               swift_mailer
+#            from_email:         admin@viettut.com
+#            to_email:           giang.fet.hut@gmail.com
+#            subject:            "OOps"
+#            level:              debug
+#        login:
+#            type:               stream
+#            path:               "%kernel.logs_dir%/auth.log"
+#            level:              info
+#            channels:           security
 monolog:
     handlers:
         main:
