--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -22,3 +22,11 @@ viettut_user:
     resource: "@ViettutUserBundle/Resources/config/routing.yml"
     type:   rest
     prefix: /api/user/v1
+
+hwi_oauth_redirect:
+    resource: "@HWIOAuthBundle/Resources/config/routing/redirect.xml"
+    prefix:   /connect
+
+hwi_oauth_login:
+    resource: "@HWIOAuthBundle/Resources/config/routing/login.xml"
+    prefix:   /login
