--- a/src/Viettut/Bundles/WebBundle/Resources/public/bower.json
+++ b/src/Viettut/Bundles/WebBundle/Resources/public/bower.json
@@ -39,7 +39,8 @@
     "ng-tags-input": "~3.0.0",
     "ngstorage": "~0.3.9",
     "satellizer": "~0.12.3",
-    "wiz-markdown": "*"
+    "wiz-markdown": "*",
+    "ui-comments": "~0.1.2"
   },
   "resolutions": {
     "font-awesome": "~4.4.0",
