--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,7 @@
         "raphy/markdown-bundle": "@stable",
         "knplabs/knp-paginator-bundle": "^2.5",
         "rollerworks/multi-user-bundle": "dev-master",
-        "jms/serializer-bundle": "0.13.0",
-        "hwi/oauth-bundle": "^0.4.0"
+        "jms/serializer-bundle": "0.13.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
