--- a/src/Viettut/Bundles/WebBundle/Resources/public/bower.json
+++ b/src/Viettut/Bundles/WebBundle/Resources/public/bower.json
@@ -45,5 +45,8 @@
   "resolutions": {
     "font-awesome": "~4.4.0",
     "angular": ">=1.3.0"
+  },
+  "devDependencies": {
+    "bootstrap-sidebar": "~0.2.2"
   }
 }
