integrate OAuth2 Facebook Google GitHub

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,9 @@
         "raphy/markdown-bundle": "@stable",
         "knplabs/knp-paginator-bundle": "^2.5",
         "rollerworks/multi-user-bundle": "dev-master",
-        "jms/serializer-bundle": "0.13.0"
+        "jms/serializer-bundle": "0.13.0",
+        "facebook/php-sdk-v4": "^5.1",
+        "google/apiclient": "1.1.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
