--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -196,6 +196,8 @@ nelmio_cors:
     paths:
         '^/api/':
             allow_methods: ['POST', 'PUT', 'PATCH', 'GET', 'DELETE']
+        '/facebook/login':
+            allow_methods: ['GET']
 
 stof_doctrine_extensions:
     orm:
@@ -224,6 +226,12 @@ knp_paginator:
     template:
         pagination: KnpPaginatorBundle:Pagination:twitter_bootstrap_v3_pagination.html.twig     # sliding pagination controls template
         sortable: KnpPaginatorBundle:Pagination:sortable_link.html.twig # sort link template
+
+#lucaszz_facebook_authentication:
+#    app_id: 529276757135612
+#    app_secret: 0fe34b757c10440e7259665a53dda55a
+#    scope: ["public_profile", "email", "user_birthday"]
+#    fields: ["name", "email", "birthday"]
 
 parameters:
     jms_serializer.json_serialization_visitor.class: Viettut\Behaviors\JsonSerializationVisitor
