change table name

--- a/src/Viettut/Bundles/UserBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/Viettut/Bundles/UserBundle/Resources/config/doctrine/User.orm.yml
@@ -1,6 +1,6 @@
 Viettut\Bundles\UserBundle\Entity\User:
     type: entity
-    table: core_user
+    table: viettut_core_user
     id:
         id:
             type: integer
