--- a/src/Viettut/Resources/config/doctrine/Core/Course.orm.yml
+++ b/src/Viettut/Resources/config/doctrine/Core/Course.orm.yml
@@ -11,6 +11,10 @@ Viettut\Entity\Core\Course:
             type: integer
             generator:
                 strategy: AUTO
+    actAs:
+        Searchable:
+        fields: [title]
+        batchUpdates: true
     fields:
         title:
             type: string
