complete tag_index and lecturer_index

--- a/src/Viettut/Resources/config/doctrine/Core/Course.orm.yml
+++ b/src/Viettut/Resources/config/doctrine/Core/Course.orm.yml
@@ -32,6 +32,9 @@ Viettut\Entity\Core\Course:
             type: integer
             options:
                 default: 0
+        token:
+            type: string
+            nullable: false
         enroll:
             type: integer
             options:
