add subscribe functionality

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -161,6 +161,7 @@ fos_rest:
     format_listener:
         rules:
             - { path: '^/api/', fallback_format: json, prefer_extension: false, priorities: ['json', 'xml'] }
+            - { path: '^/public/api/', fallback_format: json, prefer_extension: false, priorities: ['json', 'xml'] }
             - { path: '^/', priorities: [ 'html', '*/*'], fallback_format: json, prefer_extension: false }
 
     access_denied_listener:
