--- a/src/Viettut/Resources/config/serializer/Entity.Core.Course.yml
+++ b/src/Viettut/Resources/config/serializer/Entity.Core.Course.yml
@@ -28,6 +28,9 @@ Viettut\Entity\Core\Course:
         hashTag:
             expose: true
             groups: [course.detail, course.summary]
+        token:
+            expose: true
+            groups: [course.detail, course.summary]
         active:
             expose: true
             groups: [course.detail]
