update Chapter, fix css error

--- a/src/Viettut/Resources/config/doctrine/Core/Chapter.orm.yml
+++ b/src/Viettut/Resources/config/doctrine/Core/Chapter.orm.yml
@@ -29,6 +29,10 @@ Viettut\Entity\Core\Chapter:
             type: boolean
             options:
                 default: true
+        token:
+            type: string
+            nullable: false
+
         createdAt:
             type: datetime
             gedmo:
