move generator bundle to prod

--- a/composer.json
+++ b/composer.json
@@ -33,9 +33,7 @@
         "rollerworks/multi-user-bundle": "dev-master",
         "jms/serializer-bundle": "0.13.0",
         "facebook/php-sdk-v4": "^5.1",
-        "google/apiclient": "1.1.6"
-    },
-    "require-dev": {
+        "google/apiclient": "1.1.6",
         "sensio/generator-bundle": "~2.3"
     },
     "scripts": {
