--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -10,9 +10,9 @@ framework:
 doctrine:
     orm:
         auto_mapping: true
-        metadata_cache_driver: apc
-        result_cache_driver: apc
-        query_cache_driver: apc
+        metadata_cache_driver: array
+        result_cache_driver: array
+        query_cache_driver: array
 
 #monolog:
 #    handlers:
